# heroku-fastapi

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
