[tool.poetry]
name = "heroku-minimal-fastapi"
version = "0.1.0"
description = ""
authors = ["Vegard Stikbakke <vegard.stikbakke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
