[tool.poetry]
name = "heroku-minimal-fastapi"
version = "0.1.0"
description = ""
authors = ["Vegard Stikbakke <vegard.stikbakke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"
uvicorn = "^0.11.7"
sqlalchemy = "^1.3.15"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
